[package]
name = "lunaria-api"
version = "0.0.0"
authors = [
    "Lunaria Contributors",
    "Jan David Nose <jandavid@playlunaria.com>",
    "Rob Pando <rob@playlunaria.com"
]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6.1"
tonic = "0.3.0"

[build-dependencies]
tonic-build = "0.3.0"
