[package]
name = "lunaria-api"
version = "0.0.0"
authors = [
    "Lunaria Contributors",
    "Jan David Nose <jandavid@playlunaria.com>",
]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

description = "A Rust API client for the video game Lunaria"
homepage = "https://playlunaria.com"
repository = "https://github.com/playlunaria/lunaria"
license = "MIT OR Apache-2.0"
keywords = [
    "game",
    "gamedev",
]
categories = [
    "api-bindings",
    "games"
]

[dependencies]
prost = "0.6.1"
tonic = "0.3.1"

[build-dependencies]
tonic-build = "0.3.1"
