[package]
name = "lunaria-godot"
version = "0.0.0"
authors = [
    "Lunaria Contributors",
    "Jan David Nose <jandavid@playlunaria.com>",
]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

description = "Bindings for Lunaria and the Godot Engine"
homepage = "https://playlunaria.com"
repository = "https://github.com/playlunaria/lunaria"
license = "MIT OR Apache-2.0"
keywords = [
    "game",
    "gamedev",
    "godot",
]
categories = [
    "games",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
lunaria = { path = "../lunaria", version = "0.0.0" }

gdnative = "0.9.3"
strum = { version = "0.21.0", features = ["derive"] }
tokio = { version = "1.10.0" }
