[package]
name = "lunaria-server"
version = "0.0.0"
authors = [
    "Lunaria Contributors",
    "Jan David Nose <jandavid@playlunaria.com>",
]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

description = "Server for Lunaria, a space-themed video game for programmers"
readme = "README.md"
homepage = "https://playlunaria.com"
repository = "https://github.com/playlunaria/lunaria"
license = "MIT OR Apache-2.0"
keywords = [
    "game",
    "gamedev",
    "server"
]
categories = [
    "games"
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
