[package]
name = "lunaria"
version = "0.0.0"
authors = [
    "Lunaria Contributors",
    "Jan David Nose <jandavid@playlunaria.com>",
]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

description = "A space-themed sandbox video game for programmers"
homepage = "https://playlunaria.com"
repository = "https://github.com/playlunaria/lunaria"
license = "MIT OR Apache-2.0"
keywords = [
    "game",
    "gamedev",
]
categories = [
    "games"
]

[dependencies]
lunaria-api = { version = "0.2.0", features = ["server"] }

getset = "0.1.1"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.7", features = ["sync"] }
tonic = "0.5.1"
uuid = { version = "0.8.2", features = ["v4"] }
